<resources>
    <string name="app_name">CMtrab1</string>
    <string name="notaInicial">Notes</string>
    <string name="save_note">Save note</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_note_confirmation">Delete Note</string>
    <string name="delete_note_confirmation_text">Are you sure you want to delete this note?</string>
    <string name="erro_edit">Error</string>
    <string name="nota_apagada">Note deleted</string>
    <string name="cancel_apagar">Cancel</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="username">Username...</string>
    <string name="password">Password...</string>
    <string name="nota_vazia">You can\'t leave the title field empty</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="noUsername">You must fill the username box</string>
    <string name="noPassword">You must fill the password box</string>
    <string name="serverError">Error trying to connect to the server</string>
    <string name="sharedPref" translatable="false">sharedPref</string>
    <string name="idUtilizador" translatable="false">idUtilizador</string>
    <string name="loginFail">Wrong username and password</string>
    <string name="logout">Logout</string>
    <string-array name="filtroTipos">
        <item name="all">All</item>
        <item name="accident">Accident</item>
        <item name="construction">Construction</item>
        <item name="other">Other</item>
    </string-array>
    <string name="errorLoadingImage">Error loading image</string>
    <string name="updateRep">Update Report</string>
    <string name="deleteRep">Delete Report</string>
    <string name="back">Return</string>
    <string-array name="filtroTipos2">
        <item name="type">Type</item>
        <item name="accident">Accident</item>
        <item name="construction">Construction</item>
        <item name="other">Other</item>
    </string-array>
    <string name="nome">Report Title</string>
    <string name="descricao">Description</string>
    <string name="addReport">Add Report</string>
    <string name="emptyReport">You must fill all the fields</string>
    <string name="registoApagado">Report succesfully deleted</string>
    <string name="erroDeletarRegisto">Error trying to delete Report</string>
    <string name="errorCreatingReport">Error trying to create report</string>
    <string name="addImage">Add Image</string>
    <string name="saveUpdate">Save changes</string>
    <string name="naoMudouValores">You must change at least one field</string>
    <string name="errorUpdating">Error while trying to update</string>
</resources>