<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundinicial"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="235dp"
        android:layout_height="104dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoapp" />

    <EditText
        android:id="@+id/descricaoRegistoAdd"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password"
        android:inputType="textAutoComplete"
        android:password="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeRegistoAdd" />

    <EditText
        android:id="@+id/nomeRegistoAdd"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="96dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:hint="@string/username"
        android:inputType="textAutoComplete"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/botaoLogin"
        android:layout_width="104dp"
        android:layout_height="67dp"
        android:layout_marginTop="112dp"
        android:text="Login"
        android:textColor="#000000"
        android:textSize="16sp"
        app:backgroundTint="#FFFFFF"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricaoRegistoAdd" />

    <Button
        android:id="@+id/botaoNotas"
        android:layout_width="104dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:text="@string/notaInicial"
        android:textColor="#000000"
        android:textSize="16sp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>